a5r bush isa